@@ -209,7 +209,7 @@ typedef          void       VOID;
 
 //  the uSoft 16bit compiler family for DOS
 
-#if defined(_MSC_VER)
+#if defined(_MSC_VER) && (_MSC_VER < 1200)
 typedef          char       CHAR;               // 1 byte
 typedef unsigned char      UCHAR;               // 1 byte
 typedef          int       INT16;               // 2 byte
@@ -244,6 +244,21 @@ typedef unsigned long      ULONG;               // 4 byte
 typedef          void       VOID;
 #endif
 #endif                                          // #if defined(__WATCOMC__)
+
+#if defined(_MSC_VER) && (_MSC_VER >= 1200)
+typedef          char       CHAR;               // 1 byte
+typedef unsigned char      UCHAR;               // 1 byte
+typedef          short      INT16;              // 2 byte
+typedef unsigned short     UINT16;              // 2 byte
+typedef          int        INT32;              // 4 byte
+typedef unsigned int       UINT32;              // 4 byte
+// --------------------------------------------------------------------------
+typedef          int        INT;                // 4 byte
+typedef unsigned int       UINT;                // 4 byte
+typedef          long       LONG;               // 4 byte
+typedef unsigned long      ULONG;               // 4 byte
+//typedef          void       VOID;
+#endif
 
 #ifdef __cplusplus
 }
