@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Mon May  8 17:40:14 NOVST 2000
+max (patch from Alex Bronin):
+* MS Visual C porting
+
+----- cvs ci ------
 Sun May  7 14:55:32 MSD 2000
 max (patch from Serguei Revtov):
 * add tossingExt token
